CallMD/src/objects/Agent__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>City</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <label>PhoneNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Providers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Providers</label>
        <referenceTo>Providers__c</referenceTo>
        <relationshipLabel>Agents</relationshipLabel>
        <relationshipName>Agents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Agent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AID#{000000}</displayFormat>
        <label>AID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>